--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "graviex",
+  "name": "autradex",
   "author": "Scott Lindh",
   "version": "1.0.0",
   "description": "",
-  "main": "graviex.js",
+  "main": "autradex.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
